added level counter

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,12 +89,26 @@ body {
   padding: 0 12px;
 }
 
+#level {
+  width: 224px;
+  border: 1px solid #2C2F33;
+  font-family: Orbitron;
+  font-size: 26px;
+  margin: 10px auto;
+  border-radius: 8px;
+  padding: 0 12px;
+}
+
 #score {
   float: right;
 }
 
 #rows {
   float: right;
+}
+
+#levelcount {
+  float: right
 }
 
 .container {
