--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,3 +108,14 @@ body {
   position: relative;
   background-color: #2C2F33;
 }
+
+.screen {
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: white;
+  opacity: 0.6;
+}
